fix: improve style spacing

--- a/src/resume/profile/Profile.scss
+++ b/src/resume/profile/Profile.scss
@@ -1,18 +1,23 @@
 @import 'bulma/sass/utilities/initial-variables';
 
 .profile {
-  .content {
-    .title:not(.is-spaced) + .subtitle {
-      margin-bottom: 0;
-      color: $grey;
+  .media-content {
+    padding: 10px;
+
+    .content {
+      .title:not(.is-spaced) + .subtitle {
+        margin-bottom: 0;
+        color: $grey;
+      }
+
+      p:not(:last-child) {
+        margin-bottom: 0;
+      }
     }
 
-    p:not(:last-child) {
+    .content:not(:last-child) {
       margin-bottom: 0;
     }
   }
-
-  .content:not(:last-child) {
-    margin-bottom: 0;
-  }
+  padding: 2rem 1.5rem;
 }
